# libtorch_example

./: CMakeLists.txt  README.md  example-app.cpp
